# browser-translate

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile
src/: languages.cpp  translate.cpp  translate.h
